--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DotVoteJs",
+  "name": "dotvote",
   "version": "0.0.0",
   "description": "Dot voting in Js",
   "main": "src/server.js",
