--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "bower": "~1.2.8",
     "grunt-bower-task": "~0.3.4",
     "grunt-concurrent": "~0.4.3",
-    "npm-check-updates": "~1.2.0"
+    "npm-check-updates": "~1.2.0",
+    "grunt-mocha": "~0.4.9"
   },
   "dependencies": {
     "express": "~3.4.8",
