--- a/public/bower.json
+++ b/public/bower.json
@@ -13,5 +13,10 @@
   "license": "MIT",
   "ignore": [
     "**/.*"
-  ]
+  ],
+  "dependencies": {
+    "ember": "~1.3.1",
+    "handlebars": "~1.3.0",
+    "components-foundation": "~5.0.2"
+  }
 }
