--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dot voting in Js",
   "main": "src/server.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,10 @@
     "grunt-bower-task": "~0.3.4",
     "grunt-concurrent": "~0.4.3",
     "npm-check-updates": "~1.2.0",
-    "grunt-mocha": "~0.4.9"
+    "grunt-mocha": "~0.4.9",
+    "mocha": "~1.17.0",
+    "chai": "~1.8.1",
+    "sinon": "~1.7.3"
   },
   "dependencies": {
     "express": "~3.4.8",
