--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "~3.4.8",
     "express-dot": "~0.1.0",
     "winston": "~0.7.2",
-    "findit": "~1.1.0"
+    "findit": "~1.1.0",
+    "proxyquire": "~0.5.2"
   }
 }
